--- a/src/app/layouts/main/main.component.scss
+++ b/src/app/layouts/main/main.component.scss
@@ -160,6 +160,18 @@
 	}
 }
 
+.menu-item {
+	fa-icon {
+		font-size: 12px;
+		margin-right: 10px;
+	}
+
+	span {
+		font-size: 14px;
+		font-weight: 300;
+	}
+}
+
 @media (min-width: 600px) {
 	.app-container {
 		grid-template-rows: 64px;
