--- a/src/app/components/dialogs/cpi/cpi.component.html
+++ b/src/app/components/dialogs/cpi/cpi.component.html
@@ -5,7 +5,7 @@
   <app-user-image *ngIf="isReady" [clickable]="false" size="lg"
     [userData]="{ firstName: data.firstName, lastName: data.lastName, image: isReady ? userImage : '', username: data.username }">
   </app-user-image>
-  <div class="delete-user-image" matRipple *ngIf="imageFromDB || isNewImage" (click)="clearImage()">
+  <div class="delete-user-image" matRipple *ngIf="imageFromDB || isNewImage || userImage" (click)="clearImage()">
     <fa-icon [icon]="faTrash"></fa-icon>
   </div>
 </div>
