--- a/src/app/components/profile-summary/profile-summary.component.scss
+++ b/src/app/components/profile-summary/profile-summary.component.scss
@@ -117,7 +117,7 @@
         display: grid;
         border-radius: 50%;
         border: var(--profile-summary-remaining-followers-border);
-        background-color: #ffeb4f;
+        background-color: #ffefb3;
         transition: border 0.2s ease-in-out;
         color: var(--profile-summary-remaining-followers-color);
 
