--- a/src/app/layouts/main/main.component.html
+++ b/src/app/layouts/main/main.component.html
@@ -41,6 +41,7 @@
                 <fa-icon [icon]="faCog"></fa-icon><span>Settings</span>
               </div>
             </button>
+            <mat-divider></mat-divider>
             <button mat-menu-item (click)="logout()">
               <div class="menu-item">
                 <fa-icon [icon]="faSignOutAlt"></fa-icon><span>Logout</span>
