--- a/src/app/pages/profile/edit-profile/edit-profile.component.html
+++ b/src/app/pages/profile/edit-profile/edit-profile.component.html
@@ -11,11 +11,11 @@
           <p>{{ email }}</p>
         </div>
         <button class="toggle-profile-view" mat-stroked-button (click)="isPublicView = false">
-          Edit Profile
+          Edit
         </button>
       </div>
       <button class="toggle-profile-view-sm" mat-stroked-button (click)="isPublicView = false">
-        Edit Profile
+        Edit
       </button>
 
       <mat-divider></mat-divider>
@@ -73,11 +73,11 @@
           <p>{{ profileForm.controls.email.value }}</p>
         </div>
         <button class="toggle-profile-view" mat-stroked-button (click)="isPublicView = true; getUserData()">
-          View Profile
+          Done
         </button>
       </div>
       <button class="toggle-profile-view-sm" mat-stroked-button (click)="isPublicView = true; getUserData()">
-        View Profile
+        Done
       </button>
       <mat-divider></mat-divider>
       <div class="section-header">
