--- a/src/app/components/collection/delete-resource-from-collection/delete-resource-from-collection.component.html
+++ b/src/app/components/collection/delete-resource-from-collection/delete-resource-from-collection.component.html
@@ -1,30 +1,26 @@
-<div
-  class="resource"
-  [ngClass]="{ 'hover-in': isActive, 'hover-out': !isActive }"
-  (mouseover)="toggleActive(true)"
-  (mouseout)="toggleActive(false)"
->
-  <div
-    *ngIf="!data.noImage"
-    class="resource-image"
-    [ngStyle]="{ 'background-image': 'url(' + data.mdImage.link + ')' }"
-  >
+<div class="resource" [ngClass]="{ 'hover-in': isActive, 'hover-out': !isActive }" (mouseover)="toggleActive(true)"
+  (mouseout)="toggleActive(false)">
+  <div *ngIf="!data.noImage && !isLoading" class="resource-image"
+    [ngStyle]="{ 'background-image': 'url(' + data.mdImage.link + ')' }">
     <div class="delete-button" (click)="deleteResourceFromCollection()">
       <fa-icon [icon]="faTimesCircle"></fa-icon>
     </div>
   </div>
 
-  <div
-    *ngIf="data.noImage"
-    class="resource-image"
-    [ngStyle]="{
+  <div *ngIf="data.noImage && !isLoading" class="resource-image" [ngStyle]="{
       'background-color': data.backgroundColor,
       color: data.textColor
-    }"
-  >
+    }">
     <p>{{ generatePlaceholderText(data.title) }}</p>
     <div class="delete-button" (click)="deleteResourceFromCollection()">
       <fa-icon [icon]="faTimesCircle"></fa-icon>
+    </div>
+  </div>
+
+  <div *ngIf="isLoading" class="resource-image">
+    <div class="loading">
+      <mat-progress-spinner *ngIf="isLoading" color="accent" mode="indeterminate" value="25" diameter="25">
+      </mat-progress-spinner>
     </div>
   </div>
 </div>
