--- a/src/app/components/collection/delete-resource-from-collection/delete-resource-from-collection.component.scss
+++ b/src/app/components/collection/delete-resource-from-collection/delete-resource-from-collection.component.scss
@@ -20,6 +20,14 @@
       margin: 0;
       font-size: 2rem;
     }
+
+    .loading {
+      width: 100%;
+      height: 100%;
+      background-color: rgb(59, 59, 59);
+      display: grid;
+      place-items: center;
+    }
   }
 
   .delete-button {
