--- a/src/app/components/profile-summary/profile-summary.component.html
+++ b/src/app/components/profile-summary/profile-summary.component.html
@@ -35,7 +35,7 @@
           class="unfollow"
           (click)="goToSettings()"
         >
-          Settings
+          Edit Profile
         </button>
       </div>
     </div>
