--- a/src/app/pages/feed/feed.component.html
+++ b/src/app/pages/feed/feed.component.html
@@ -1,12 +1,6 @@
 <div class="parent">
-  <div
-    class="feed-container"
-    infiniteScroll
-    [infiniteScrollDistance]="2"
-    [infiniteScrollThrottle]="50"
-    (scrolled)="onScrollDown()"
-    [scrollWindow]="false"
-  >
+  <div class="feed-container" infiniteScroll [infiniteScrollDistance]="2" [infiniteScrollThrottle]="50"
+    (scrolled)="onScrollDown()" [scrollWindow]="false">
     <app-post *ngFor="let post of posts" [data]="post" [currentUser]="username" [currentUserId]="userId"></app-post>
 
     <!-- * If loading -->
@@ -20,4 +14,3 @@
     </div>
   </div>
 </div>
-
