--- a/src/app/components/empty-state/empty-state.component.scss
+++ b/src/app/components/empty-state/empty-state.component.scss
@@ -1,5 +1,5 @@
 .empty-state-container {
-    min-width: 250px;
+    max-width: 500px;
     padding: 15px;
     background-color: var(--empty-state-container-background);
     border-radius: 5px;
@@ -7,6 +7,8 @@
     display: grid;
     place-items: center;
     margin-bottom: 25px;
+    margin-left: auto;
+    margin-right: auto;
 
     .content {
         .image {
