--- a/src/assets/styles/general.scss
+++ b/src/assets/styles/general.scss
@@ -349,7 +349,7 @@ app-root {
 .general-divider {
   width: 100%;
   height: 1px;
-  background-color: rgba(0, 0, 0, .1);
+  background-color: var(--general-divider);
   margin: 15px 0;
 }
 
