--- a/src/app/components/user-interests/user-interests.component.html
+++ b/src/app/components/user-interests/user-interests.component.html
@@ -21,7 +21,7 @@
         </div>
     </div>
     
-    <app-custom-button (click)="save()" [buttonLabel]="submitButtonText" [isDisabled]="interests.length === 0 || isLoading" size="small"></app-custom-button>    
+    <app-custom-button (click)="save()" [buttonLabel]="submitButtonText" size="small"></app-custom-button>    
 </div>
 
 <div class="general-divider"></div>
