--- a/src/app/components/user-interests/user-interests.component.scss
+++ b/src/app/components/user-interests/user-interests.component.scss
@@ -1,3 +1,36 @@
+.interests {
+    padding: 15px;
+    max-width: 600px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 25px;
+
+    h4 {
+        margin-top: 0;
+        margin-bottom: 0;
+    }
+
+    .list-of-interests {
+
+        // display: grid;
+        // grid-template-columns: repeat(4, 1fr);
+        // grid-gap: 5px;
+        p {
+            display: inline-block;
+            background-color: var(--your-list-of-interests-background-color);
+            color: var(--profile-summary-list-of-interests-p);
+            padding: 5px 15px;
+            border-radius: 15px;
+            text-align: center;
+            margin-bottom: 0;
+
+            &:not(:last-of-type) {
+                margin-right: 5px;
+            }
+        }
+    }
+}
+
 .user-interests-container {
     max-width: 500px;
     margin-bottom: 25px;
@@ -6,6 +39,7 @@
 
     .text-container {
         margin-bottom: 25px;
+
         h1 {
             font-family: "Montserrat", sans-serif;
         }
