--- a/src/app/components/dialogs/ff/ff.component.scss
+++ b/src/app/components/dialogs/ff/ff.component.scss
@@ -53,15 +53,15 @@
 
         .details {
           align-self: center;
-
+  
           span {
             display: block;
-
-            &.name {
+  
+            &:nth-of-type(1) {
               font-size: 14px;
             }
-
-            &.username {
+  
+            &:nth-of-type(2) {
               font-size: 12px;
             }
           }
