--- a/src/app/components/user-interests/user-interests.component.scss
+++ b/src/app/components/user-interests/user-interests.component.scss
@@ -23,6 +23,7 @@
             border-radius: 15px;
             text-align: center;
             margin-bottom: 0;
+            text-transform: lowercase;
 
             &:not(:last-of-type) {
                 margin-right: 5px;
@@ -32,10 +33,12 @@
 }
 
 .user-interests-container {
-    max-width: 500px;
+    max-width: 600px;
     margin-bottom: 25px;
     margin-left: auto;
     margin-right: auto;
+    animation: slideDownFadeIn 75ms ease-in-out;
+    animation-fill-mode: forwards;
 
     .text-container {
         margin-bottom: 25px;
@@ -43,5 +46,28 @@
         h1 {
             font-family: "Montserrat", sans-serif;
         }
+    }
+
+    .buttons-container {
+        padding-bottom: 35px;
+        .inner {
+            float: right;
+
+            button:nth-of-type(2) {
+                margin-left: 10px;
+            }
+        }
+    }
+}
+
+@keyframes slideDownFadeIn {
+    0% {
+        opacity: 0;
+        transform: translateY(-10px);
+    }
+
+    100% {
+        opacity: 1;
+        transform: translateY(0);
     }
 }
