added route animations

--- a/src/app/pages/manage/manage-collections/manage-collections.component.html
+++ b/src/app/pages/manage/manage-collections/manage-collections.component.html
@@ -13,7 +13,7 @@
   </ng-template>
 
   <ng-template #elseBlock>
-    <app-collection *ngFor="let collection of collections" [data]="collection"></app-collection>
+    <app-collection @fadeIn *ngFor="let collection of collections" [data]="collection"></app-collection>
   </ng-template>
 
   <!-- * Loading -->
