--- a/src/app/components/loading/loading.component.scss
+++ b/src/app/components/loading/loading.component.scss
@@ -71,7 +71,7 @@
 .collection {
     background-color: var(--loading-background);
     border-radius: 5px;
-    width: 200px;
+    width: 100%;
     max-width: 300px;
     margin-bottom: 25px;
 
