--- a/src/app/components/profile-summary/profile-summary.component.scss
+++ b/src/app/components/profile-summary/profile-summary.component.scss
@@ -79,6 +79,7 @@
     padding: 15px 15px 15px 15px;
     border-bottom: 1px solid rgba(0, 0, 0, 0.1);
     .box {
+      cursor: pointer;
       border-radius: 5px;
       color: white;
       padding: 25px;
