--- a/src/assets/styles/no-auth-layout.scss
+++ b/src/assets/styles/no-auth-layout.scss
@@ -1,11 +1,15 @@
 @import "./variables.scss";
 
+.grecaptcha-badge {
+	visibility: hidden;
+}
+
 .no-auth-layout {
 	display: grid;
 	grid-template-columns: 1fr;
 	width: 100%;
 	height: 100%;
-	
+
 	.left {
 		align-self: center;
 		justify-self: center;
@@ -23,11 +27,13 @@
 		.form {
 			max-width: 100%;
 			margin-bottom: 50px;
+
 			.form-title {
 				font-family: 'Montserrat', sans-serif;
 				margin-bottom: 25px;
 				color: var(--no-auth-component-text-color);
 			}
+
 			mat-form-field {
 				width: 100%;
 			}
@@ -35,6 +41,12 @@
 			button {
 				width: 100% !important;
 			}
+		}
+
+		.recaptcha-protection {
+			margin: 15px 0;
+			color: rgba(0, 0, 0, .2);
+			font-size: 12px;
 		}
 
 		.alternative {
@@ -84,6 +96,7 @@
 @media (min-width: 768px) {
 	.no-auth-layout {
 		grid-template-columns: 1fr 1fr;
+
 		.right {
 			display: inherit;
 		}
