--- a/src/app/components/resource/resource.component.scss
+++ b/src/app/components/resource/resource.component.scss
@@ -10,7 +10,6 @@
 
 .resource {
   cursor: pointer;
-  max-width: 300px;
   box-shadow: 0 2px 20px rgba(0, 0, 0, 0.1);
   background-color: var(--resource-background-color);
   border-radius: 5px;
@@ -43,9 +42,8 @@
   }
 
   .image {
-    width: 275px;
+    width: 100%;
     height: 150px;
-    max-width: 300px;
     max-height: 300px;
     object-fit: cover;
 
