--- a/src/app/pages/share-resource/share-resource.component.html
+++ b/src/app/pages/share-resource/share-resource.component.html
@@ -44,7 +44,7 @@
           <div class="custom-image" *ngIf="!ogImage">
             <div class="icon-text">
               <div class="icon-container">
-                <fa-icon [icon]="faGlobe" class="globe"></fa-icon>
+                <fa-icon [icon]="faImage" class="globe"></fa-icon>
               </div>
 
               <p>
@@ -95,7 +95,7 @@
           </p>
         </div>
 
-        <div class="custom-input">
+        <div class="custom-input mb-50">
           <div class="label-container">
             <label>Tags</label>
           </div>
