--- a/src/assets/styles/_colors.scss
+++ b/src/assets/styles/_colors.scss
@@ -185,7 +185,7 @@ $resource-stats-like: rgba(0, 0, 0, 0.2);
 $resource-stats-like-dark: white;
 
 // * Share resource
-$custom-image-background-color: rgb(233, 231, 231);
+$custom-image-background-color: #f6f8fa;
 $custom-image-background-color-dark: #2d2d2d;
 $custom-image-p: inherit;
 $custom-image-p-dark: white;
