--- a/src/app/components/user-interests/user-interests.component.scss
+++ b/src/app/components/user-interests/user-interests.component.scss
@@ -13,7 +13,9 @@
         margin-right: auto;
         margin-bottom: 25px;
 
-        h4 {
+        h6 {
+            font-family: "Montserrat", sans-serif;
+            text-transform: uppercase;
             margin-top: 0;
             margin-bottom: 0;
         }
