added everest logo to navigation

--- a/src/app/layouts/main/main.component.html
+++ b/src/app/layouts/main/main.component.html
@@ -7,7 +7,7 @@
         </button>
         <a class="branding-container" routerLink="/">
           <div class="app-name">
-            <p>Everest</p>
+            <img [src]="logo" alt="Site Logo">
           </div>
         </a>
       </div>
