added logo to no-auth

--- a/src/app/layouts/no-auth/no-auth.component.html
+++ b/src/app/layouts/no-auth/no-auth.component.html
@@ -1,6 +1,6 @@
 <div class="no-auth-layout">
     <div class="left">
-        <h1>Everest</h1>
+        <img [src]="logo" alt="Site Logo">
         <p>A social network lite where you can share and collect stuff off the net
         </p>
 
