made resource component maintain height

--- a/src/app/pages/manage/manage.component.html
+++ b/src/app/pages/manage/manage.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="header">
-    <h3>{{ form.get("collections").value ? "Collections" : "Posts" }}</h3>
+    <h3>Profile</h3>
     <div
       class="controls one-column"
       [formGroup]="form"
