--- a/src/app/components/resource/resource.component.scss
+++ b/src/app/components/resource/resource.component.scss
@@ -43,8 +43,7 @@
 
   .image {
     width: 100%;
-    height: 150px;
-    max-height: 300px;
+    height: 175px;
     object-fit: cover;
 
     &::before {
@@ -55,10 +54,11 @@
   }
 
   .details {
-    padding: 0 20px 20px 20px;
+    padding: 0 20px;
     color: var(--resource-details-text-color);
     font-size: 12px;
     line-height: 20px;
+    height: 100px;
 
     .type {
       margin-left: 0;
@@ -91,14 +91,12 @@
 }
 
 .no-image-text {    
-  padding: 15px;
-  border-radius: 5px;
   display: grid;
   place-items: center;
   margin-bottom: 15px;
-  min-height: 150px;
+  height: 145px;
   max-width: 600px;
-  max-height: 400px;
+  padding: 15px;
 
   .text-container {
       p {
