changed from Hind to Nunito Sans

--- a/src/assets/styles/general.scss
+++ b/src/assets/styles/general.scss
@@ -1,5 +1,5 @@
 * {
-  font-family: "Hind", sans-serif;
+  font-family: "Nunito Sans", sans-serif;
 
   scrollbar-color: rgb(119, 119, 119) transparent;
   scrollbar-width: thin;
