--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,4 @@
+@import "https://fonts.googleapis.com/icon?family=Material+Icons";
 @import "./assets/styles/modules/fonts";
 @import "~normalize.css/normalize.css";
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
