--- a/src/assets/styles/everest-theme.scss
+++ b/src/assets/styles/everest-theme.scss
@@ -6,7 +6,7 @@ $accent-color: (50: #FF795A,
 
 @import '~@angular/material/theming';
 
-$custom-typography: mat-typography-config($font-family: 'Hind, monospace',
+$custom-typography: mat-typography-config($font-family: 'Nunito Sans, monospace',
     $headline: mat-typography-level(32px, 48px, 700),
     $body-1: mat-typography-level(16px, 24px, 500));
 @include mat-core($custom-typography);
