--- a/src/app/layouts/main/main.component.html
+++ b/src/app/layouts/main/main.component.html
@@ -18,7 +18,7 @@
           <app-search></app-search>
         </div>
 
-        <div class="share-resource" (click)="goToShareResource()">
+        <div class="share-resource" (click)="goToShareResource()" matRipple>
           <fa-icon [icon]="faPlus"></fa-icon>
         </div>
 
