--- a/src/app/pages/share-resource/share-resource.component.html
+++ b/src/app/pages/share-resource/share-resource.component.html
@@ -1,4 +1,4 @@
-<mat-progress-bar mode="query" *ngIf="isLoading"></mat-progress-bar>
+<mat-progress-bar mode="query" *ngIf="isLoadingOG"></mat-progress-bar>
 <form [formGroup]="shareResourceForm">
   <div class="section-container">
     <div class="section">
