wip forget password

--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -33,8 +33,13 @@
 </div>
 
 <div class="alternative" routerLink="/signup">
-  <span>Not a member yet? Sign up here</span>
-  <div class="go-to-signup" matRipple>
-    <fa-icon [icon]="faArrowRight"></fa-icon>
+  <div class="fp">
+    <span>Forgot Password?</span>
+  </div>
+  <div class="main">
+    <span>Sign up here</span>
+    <div class="go-to-signup" matRipple>
+      <fa-icon [icon]="faArrowRight"></fa-icon>
+    </div>
   </div>
 </div>
