--- a/src/app/pages/signup/signup.component.html
+++ b/src/app/pages/signup/signup.component.html
@@ -113,11 +113,8 @@
 </div>
 
 <div class="alternative" routerLink="/login">
-  <div class="fp"></div>
-  <div class="main">
-    <span>Sign in here</span>
-    <div class="go-to-signup" matRipple>
-      <fa-icon [icon]="faArrowRight"></fa-icon>
-    </div>
+  <span>Have an account? Sign in here</span>
+  <div class="go-to-signup" matRipple>
+    <fa-icon [icon]="faArrowRight"></fa-icon>
   </div>
 </div>
