forgot password - added email info box

--- a/src/app/pages/forgot-password/forgot-password.component.html
+++ b/src/app/pages/forgot-password/forgot-password.component.html
@@ -20,14 +20,17 @@
         </form>
     </mat-step>
     <mat-step [stepControl]="step2form" [editable]="step2Complete">
+        <div class="email-information">
+            We've sent an email with a <b>6 digit code</b> to your email
+        </div>
         <form [formGroup]="step2form" (ngSubmit)="submitStep2()">
-            <ng-template matStepLabel>Type in the code we sent to your email</ng-template>
+            <ng-template matStepLabel>Type in the code we sent you</ng-template>
             <div class="custom-input">
                 <div class="label-container">
                     <label>Code</label>
                 </div>
                 <div class="input-container">
-                    <input type="text" placeholder="123456" formControlName="code" />
+                    <input type="text" placeholder="XXXXXX" formControlName="code" />
                 </div>
                 <p class="error-message"
                     *ngIf="step2form.controls.code.hasError('required') && step2form.controls.code.dirty">
