working on forget password

--- a/src/app/pages/forgot-password/forgot-password.component.html
+++ b/src/app/pages/forgot-password/forgot-password.component.html
@@ -1,4 +1,4 @@
-<mat-vertical-stepper [linear]="isLinear" #stepper *ngIf="formsReady">
+<mat-vertical-stepper [linear]="isLinear" #stepper *ngIf="formsReady" class="mb-25">
     <mat-step [stepControl]="step1form" [editable]="step1Complete">
         <form [formGroup]="step1form" (ngSubmit)="submitStep1()">
             <ng-template matStepLabel>Type in your your email</ng-template>
@@ -15,7 +15,7 @@
                 </p>
             </div>
             <div>
-                <button type="submit" mat-stroked-button>Next</button>
+                <button type="submit" mat-stroked-button [disabled]="isLoading">Next</button>
             </div>
         </form>
     </mat-step>
@@ -38,7 +38,7 @@
                 </p>
             </div>
             <div>
-                <button type="submit" mat-stroked-button>Next</button>
+                <button type="submit" mat-stroked-button [disabled]="isLoading">Next</button>
             </div>
         </form>
     </mat-step>
@@ -50,7 +50,7 @@
                     <label>New Password</label>
                 </div>
                 <div class="input-container">
-                    <input type="text" formControlName="password" />
+                    <input type="password" formControlName="password" />
                 </div>
                 <p class="error-message"
                     *ngIf="step3form.controls.password.hasError('required') && step3form.controls.password.dirty">
@@ -63,16 +63,32 @@
                     <label>Confirm New Password</label>
                 </div>
                 <div class="input-container">
-                    <input type="text" formControlName="confirmPassword" />
+                    <input type="password" formControlName="confirm_password" />
                 </div>
                 <p class="error-message"
-                    *ngIf="step3form.controls.confirmPassword.hasError('required') && step3form.controls.confirmPassword.dirty">
+                    *ngIf="step3form.controls.confirm_password.hasError('required') && step3form.controls.confirm_password.dirty">
                     Please enter new password
+                </p>
+
+                <p class="error-message"
+                    *ngIf="step3form.controls['confirm_password'].hasError('passwordNotEquivalent')">
+                    Passwords don't match
+                </p>
+                <p class="error-message"
+                    *ngIf="step3form.controls['confirm_password'].hasError('required') && step3form.controls.confirm_password.dirty">
+                    Password is required
                 </p>
             </div>
             <div>
-                <button type="submit" mat-stroked-button>Done</button>
+                <button type="submit" mat-stroked-button [disabled]="isLoading">Done</button>
             </div>
         </form>
     </mat-step>
 </mat-vertical-stepper>
+
+<div class="alternative" routerLink="/login">
+    <span>Back to Login</span>
+    <div class="go-to-signup" matRipple>
+        <fa-icon [icon]="faArrowRight"></fa-icon>
+    </div>
+</div>
