--- a/src/app/pages/forgot-password/forgot-password.component.html
+++ b/src/app/pages/forgot-password/forgot-password.component.html
@@ -1,4 +1,4 @@
-<mat-vertical-stepper [linear]="isLinear" #stepper *ngIf="formsReady" class="mb-25">
+<mat-vertical-stepper [linear]="isLinear" color="accent" #stepper *ngIf="formsReady" class="mb-25">
     <mat-step [stepControl]="step1form" [editable]="step1Complete">
         <form [formGroup]="step1form" (ngSubmit)="submitStep1()">
             <ng-template matStepLabel>Type in your your email</ng-template>
@@ -21,7 +21,7 @@
     </mat-step>
     <mat-step [stepControl]="step2form" [editable]="step2Complete">
         <div class="email-information">
-            We've sent an email with a <b>6 digit code</b> to your email
+            We've sent an email with a <b>6 digit code</b> to your email. It should arrive in a few minutes.
         </div>
         <form [formGroup]="step2form" (ngSubmit)="submitStep2()">
             <ng-template matStepLabel>Type in the code we sent you</ng-template>
