--- a/src/app/pages/forgot-password/forgot-password.component.scss
+++ b/src/app/pages/forgot-password/forgot-password.component.scss
@@ -1,7 +1,7 @@
 .email-information {
     padding: 15px;
     border-radius: 5px;
-    background-color: #e2ffe9;
+    background-color: #3392ff2b;
     color: #4a4a4a;
     margin: 15px 0;
     font-size: 12px;
